# athene

./: .gitignore  README.md  athene.py  main.py  pyproject.toml
src/audio/: player.py  recorder.py  speech.py
src/core/: chat.py
src/gui/: app.py
src/models/: chat.py  todo_manager.py
src/plugins/: base.py  clipboard_plugin.py  todo_plugin.py
